2009-12-09  Steve Block  <steveblock@google.com>

        Reviewed by Darin Fisher.

        Adds wtf/StdLibExtras.h include for DEFINE_STATIC_LOCAL in V8 ScriptState.
        https://bugs.webkit.org/show_bug.cgi?id=32330

        Build fix only, no new tests.

        * bindings/v8/ScriptState.cpp: Modified. Adds wtf/StdLibExtras.h include.

2009-12-09  Steve Block  <steveblock@google.com>

        Reviewed by Darin Adler.

        Adds ENABLE(INSPECTOR) guards around script binding methods that use types
        defined only when INSPECTOR is enabled.
        https://bugs.webkit.org/show_bug.cgi?id=32328

        Build fix only, no new tests.

        * bindings/js/ScriptValue.cpp: Modified. Added ENABLE(INSPECTOR) guard to ScriptValue::quarantineValue.
        * bindings/v8/ScriptObject.cpp: Modified. Added ENABLE(INSPECTOR) guard to some overloads of ScriptGlobalObject::set.

2009-12-09  Steve Block  <steveblock@google.com>

        Reviewed by Adam Barth.

        Adds Android Makefiles for building with V8.
        Also updates existing Android Makefiles with latest additions.
        https://bugs.webkit.org/show_bug.cgi?id=32278

        Build fix only, no new tests.

        * Android.derived.jscbindings.mk: Modified.
        * Android.derived.mk: Modified.
        * Android.derived.v8bindings.mk: Added.
        * Android.jscbindings.mk: Modified.
        * Android.mk: Modified.
        * Android.v8bindings.mk: Added.

2009-12-09  Jonathan Dixon  <joth@chromium.org>

        Reviewed by Dimitri Glazkov.

        Bug 32338 - [Chromium] Fix Chromium builder by including missing GeolocationServiceChromium
        https://bugs.webkit.org/show_bug.cgi?id=32338

        Fix build break: re-include file dropped out by merge in http://trac.webkit.org/changeset/51681/trunk/WebCore/WebCore.gypi

        * WebCore.gypi: Add missing GeolocationServiceChromium.cpp

2009-12-09  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Brady Eidson.
